Update: Text alignment

--- a/capstoneproject.html
+++ b/capstoneproject.html
@@ -9,7 +9,7 @@
 
 
 	
-        <div class="container">
+        <div class="container" text-align="center">
 			<h2>Angeles City Science High School - Senior High School</h2>
 			<h3>Doña Aurora St., Lourdes Sur East, Angeles City</h3>
 			
